--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
     <title>Projeto API</title>
 </head>
 
@@ -13,10 +15,10 @@
     <div class="box">
         <h1>Cadastro</h1>
         <form action="">
-            <input type="text" name="nome" placeholder="Nome">
-            <input type="text" name="email" placeholder="E-mail">
-            <input type="text" name="telefone" placeholder="Telefone">
-            <input type="password" name="senha" placeholder="Senha">
+            <input type="text" class="nome" name="nome" placeholder="Nome">
+            <input type="text" class="email" name="email" placeholder="E-mail">
+            <input type="text" class="telefone" name="telefone" placeholder="Telefone">
+            <input type="password" class="senha" name="senha" placeholder="Senha">
             <button>Cadastre-se</button>
         </form>
     </div>
