--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,14 +12,17 @@
 
 <body>
 
+    <h1></h1>
+
+    <h1 class="login">Login</h1>
+
     <div class="box">
-        <h1>Cadastro</h1>
         <form action="">
             <input type="text" class="nome" name="nome" placeholder="Nome">
             <input type="text" class="email" name="email" placeholder="E-mail">
             <input type="text" class="telefone" name="telefone" placeholder="Telefone">
             <input type="password" class="senha" name="senha" placeholder="Senha">
-            <button>Cadastre-se</button>
+            <button>Acesso</button>
         </form>
     </div>
 </body>
